adds some styling

--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@
     min-height: 100vh;
     flex-direction: row;
     margin: 0;
+    font-family: "Roboto", sans-serif;
+    background-color: #75B975;
   }
   .col-1 {
-    background: #D7E8D4;
     flex: 1;
   }
   .col-2 {
@@ -22,31 +23,22 @@
   }
   .content > article {
     flex: 3;
-    min-height: 80vh;
+    min-height: 90vh;
   }
-  .content > aside {
-    background: beige;
-    flex: 1;
-  }
-  header, footer {
-    background: yellowgreen;
+ footer {
     height: 10vh;
   }
-  header, footer, article, nav {
+  footer, article, nav {
     padding: 1em;
   }
 
-
-body{
-    background: #75B975;
-  }
   .box{
     position: relative;
     margin: auto;
     display: block;
     margin-top: 8%;
-    width: 600px;
-    height: 420px;
+    width: 300px;
+    height: 210px;
     background: none;
   }
   .head{
@@ -135,4 +127,30 @@ body{
     top: 66%;
     border-radius: 50px;
     z-index: 4;
+  }
+
+  blockquote{
+    font-size: 1.4em;
+    margin:50px auto;
+    font-style:italic;
+    color: #555555;
+    padding:1.2em 30px 1.2em 75px;
+    border-left:8px solid #78C0A8 ;
+    line-height:1.6;
+    position: relative;
+    background:#EDEDED;
+  }
+  
+  blockquote::before{
+    font-family:Arial;
+    content: "\201C";
+    color:#78C0A8;
+    font-size:4em;
+    position: absolute;
+    left: 10px;
+    top:-10px;
+  }
+  
+  blockquote::after{
+    content: '';
   }
